--- a/sandbox/power and maps/scratchpad.ipynb
+++ b/sandbox/power and maps/scratchpad.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "This notebook downloads a public dataset of all US power plants, including their locations and types (nuclear, coal, natural gas, wind, solar, etc.), and plots them on a US map using matplotlib and cartopy. Different icons are used for each power type.\n",
     "\n",
-    "Dataset source: [EPA eGRID Open Data Portal](https://www.epa.gov/egrid)"
+    "Dataset source: [EPA eGRID Open Data Portal](https://www.epa.gov/egrid/detailed-data)"
    ]
   },
   {
@@ -261,6 +261,18 @@
     "        display(plants.head(10))\n",
     "else:\n",
     "    print(\"No data loaded.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "800ab65c",
+   "metadata": {},
+   "source": [
+    "### To do\n",
+    "show list of fuel types unknown\n",
+    "categorize them\n",
+    "validate the map\n",
+    "have it cut for just nuclear, and a few others and eye ball it"
    ]
   },
   {
