--- a/substack/articles/2025.08.15-fuzzy_like_matching/scratchpad.ipynb
+++ b/substack/articles/2025.08.15-fuzzy_like_matching/scratchpad.ipynb
@@ -13,9 +13,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "61972b69",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "sql"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -66,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "c9037496",
    "metadata": {},
    "outputs": [
@@ -82,7 +86,6 @@
     }
    ],
    "source": [
-    "# Create the txns table\n",
     "cn.execute(\"\"\"\n",
     "    CREATE OR REPLACE TABLE txns (\n",
     "        pstd_dt DATE,\n",
@@ -91,7 +94,6 @@
     "    )\n",
     "\"\"\")\n",
     "\n",
-    "# Insert records with hardcoded random dates\n",
     "cn.execute(\"\"\"\n",
     "    INSERT INTO txns (pstd_dt, item_desc, charge_amt) VALUES\n",
     "        ('2024-05-01', '4 Pack Banana', 2.99),\n",
@@ -173,6 +175,77 @@
     "        left join grocery_categories as gc \n",
     "            on t.item_desc ilike gc.item_pattern\n",
     "    group by all\n",
+    "\"\"\"\n",
+    "cn.sql(sql).show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "5ee401e2",
+   "metadata": {
+    "vscode": {
+     "languageId": "sql"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "┌────────────┬──────────────────┬───────────────┐\n",
+      "│ pstd_month │ grocery_category │ total_charges │\n",
+      "│   int64    │     varchar      │ decimal(38,2) │\n",
+      "├────────────┼──────────────────┼───────────────┤\n",
+      "│          5 │ seafood          │         29.25 │\n",
+      "│          5 │ bakery           │          5.99 │\n",
+      "│          5 │ vegetable        │          7.24 │\n",
+      "│          6 │ bakery           │          9.00 │\n",
+      "│          6 │ vegetable        │          7.20 │\n",
+      "│          6 │ seafood          │         14.00 │\n",
+      "│          5 │ fruit            │          7.34 │\n",
+      "│          6 │ dairy            │         12.75 │\n",
+      "│          5 │ meat             │         22.49 │\n",
+      "│          6 │ meat             │         32.25 │\n",
+      "│          5 │ dairy            │          8.84 │\n",
+      "│          6 │ fruit            │         22.29 │\n",
+      "├────────────┴──────────────────┴───────────────┤\n",
+      "│ 12 rows                             3 columns │\n",
+      "└───────────────────────────────────────────────┘\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "sql = \"\"\"\n",
+    "    SELECT \n",
+    "        month(t.pstd_dt) AS pstd_month,\n",
+    "        CASE\n",
+    "            WHEN LOWER(t.item_desc) LIKE '%banana%' THEN 'fruit'\n",
+    "            WHEN LOWER(t.item_desc) LIKE '%apple%' THEN 'fruit'\n",
+    "            WHEN LOWER(t.item_desc) LIKE '%orange%' THEN 'fruit'\n",
+    "            WHEN LOWER(t.item_desc) LIKE '%grape%' THEN 'fruit'\n",
+    "            WHEN LOWER(t.item_desc) LIKE '%strawberry%' THEN 'fruit'\n",
+    "            WHEN LOWER(t.item_desc) LIKE '%lettuce%' THEN 'vegetable'\n",
+    "            WHEN LOWER(t.item_desc) LIKE '%spinach%' THEN 'vegetable'\n",
+    "            WHEN LOWER(t.item_desc) LIKE '%carrot%' THEN 'vegetable'\n",
+    "            WHEN LOWER(t.item_desc) LIKE '%broccoli%' THEN 'vegetable'\n",
+    "            WHEN LOWER(t.item_desc) LIKE '%cucumber%' THEN 'vegetable'\n",
+    "            WHEN LOWER(t.item_desc) LIKE '%chicken%' THEN 'meat'\n",
+    "            WHEN LOWER(t.item_desc) LIKE '%beef%' THEN 'meat'\n",
+    "            WHEN LOWER(t.item_desc) LIKE '%pork%' THEN 'meat'\n",
+    "            WHEN LOWER(t.item_desc) LIKE '%salmon%' THEN 'seafood'\n",
+    "            WHEN LOWER(t.item_desc) LIKE '%shrimp%' THEN 'seafood'\n",
+    "            WHEN LOWER(t.item_desc) LIKE '%milk%' THEN 'dairy'\n",
+    "            WHEN LOWER(t.item_desc) LIKE '%cheese%' THEN 'dairy'\n",
+    "            WHEN LOWER(t.item_desc) LIKE '%yogurt%' THEN 'dairy'\n",
+    "            WHEN LOWER(t.item_desc) LIKE '%bread%' THEN 'bakery'\n",
+    "            WHEN LOWER(t.item_desc) LIKE '%bagel%' THEN 'bakery'\n",
+    "            ELSE NULL\n",
+    "        END AS grocery_category,\n",
+    "        SUM(t.charge_amt) AS total_charges\n",
+    "    FROM txns AS t\n",
+    "    GROUP BY pstd_month, grocery_category\n",
     "\"\"\"\n",
     "cn.sql(sql).show()"
    ]
