--- a/substack/articles/2025.08.26 - Level_up_your_prompting/sql_parser_demo.ipynb
+++ b/substack/articles/2025.08.26 - Level_up_your_prompting/sql_parser_demo.ipynb
@@ -107,10 +107,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "dc9ad3ea",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SQL Query:\n",
+      "select \n",
+      "    c.customer_name, \n",
+      "    o.order_date, \n",
+      "    p.product_name, \n",
+      "    od.quantity\n",
+      "from customers as c\n",
+      "    join orders as o on c.customer_id = o.customer_id\n",
+      "    join order_details as od on o.order_id = od.order_id\n",
+      "    join products as p on od.product_id = p.product_id\n",
+      "\n",
+      "Parsed Result:\n",
+      "{\n",
+      "  \"tables\": [\n",
+      "    {\n",
+      "      \"table_name\": \"customers\",\n",
+      "      \"alias\": \"c\",\n",
+      "      \"columns\": [\n",
+      "        \"customer_name\"\n",
+      "      ]\n",
+      "    },\n",
+      "    {\n",
+      "      \"table_name\": \"orders\",\n",
+      "      \"alias\": \"o\",\n",
+      "      \"columns\": [\n",
+      "        \"order_date\"\n",
+      "      ]\n",
+      "    },\n",
+      "    {\n",
+      "      \"table_name\": \"order_details\",\n",
+      "      \"alias\": \"od\",\n",
+      "      \"columns\": [\n",
+      "        \"quantity\"\n",
+      "      ]\n",
+      "    },\n",
+      "    {\n",
+      "      \"table_name\": \"products\",\n",
+      "      \"alias\": \"p\",\n",
+      "      \"columns\": [\n",
+      "        \"product_name\"\n",
+      "      ]\n",
+      "    }\n",
+      "  ]\n",
+      "}\n"
+     ]
+    }
+   ],
    "source": [
     "sql2 = \"\"\"\n",
     "select \n",
@@ -143,10 +194,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "7de5f329",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SQL Query:\n",
+      "select employees.name, employees.salary, departments.dept_name\n",
+      "from employees\n",
+      "    join departments on employees.dept_id = departments.dept_id\n",
+      "\n",
+      "Parsed Result:\n",
+      "{\n",
+      "  \"tables\": [\n",
+      "    {\n",
+      "      \"table_name\": \"employees\",\n",
+      "      \"alias\": null,\n",
+      "      \"columns\": [\n",
+      "        \"name\",\n",
+      "        \"salary\"\n",
+      "      ]\n",
+      "    },\n",
+      "    {\n",
+      "      \"table_name\": \"departments\",\n",
+      "      \"alias\": null,\n",
+      "      \"columns\": [\n",
+      "        \"dept_name\"\n",
+      "      ]\n",
+      "    }\n",
+      "  ]\n",
+      "}\n"
+     ]
+    }
+   ],
    "source": [
     "sql3 = \"\"\"\n",
     "select employees.name, employees.salary, departments.dept_name\n",
@@ -173,10 +256,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "567b7988",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SQL Query:\n",
+      "select \n",
+      "    u.username,\n",
+      "    u.email,\n",
+      "    prof.bio,\n",
+      "    prof.avatar_url\n",
+      "from users u\n",
+      "    left join user_profiles as prof on u.user_id = prof.user_id\n",
+      "\n",
+      "Parsed Result:\n",
+      "{\n",
+      "  \"tables\": [\n",
+      "    {\n",
+      "      \"table_name\": \"users\",\n",
+      "      \"alias\": \"u\",\n",
+      "      \"columns\": [\n",
+      "        \"email\",\n",
+      "        \"username\"\n",
+      "      ]\n",
+      "    },\n",
+      "    {\n",
+      "      \"table_name\": \"user_profiles\",\n",
+      "      \"alias\": \"prof\",\n",
+      "      \"columns\": [\n",
+      "        \"avatar_url\",\n",
+      "        \"bio\"\n",
+      "      ]\n",
+      "    }\n",
+      "  ]\n",
+      "}\n"
+     ]
+    }
+   ],
    "source": [
     "sql4 = \"\"\"\n",
     "select \n",
