--- a/substack/articles/2025.09.28-s3_tables/scratchpad.ipynb
+++ b/substack/articles/2025.09.28-s3_tables/scratchpad.ipynb
@@ -63,12 +63,23 @@
    "execution_count": null,
    "id": "22d96b4b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<_duckdb.DuckDBPyConnection at 0x121a13f30>"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#create a table\n",
+    "#create a table (athena shows the schema but can't read any of the tables - its an interesting error; might want to show screenshot)\n",
     "cn.execute(\"\"\"\n",
     "    create table if not exists s3cat.ns1.tbl1 (\n",
-    "        id integer,\n",
+    "        id bigint,\n",
     "        data string\n",
     "    )\n",
     "\"\"\")"
@@ -76,10 +87,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "28c0097e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<_duckdb.DuckDBPyConnection at 0x121a13f30>"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "cn.execute(\"insert into s3cat.ns1.tbl1 values (1, 'a'), (2, 'b'), (3, 'c')\")"
    ]
@@ -108,13 +130,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "aa2cc534",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "┌───────┬─────────┐\n",
+       "│  id   │  data   │\n",
+       "│ int64 │ varchar │\n",
+       "├───────┼─────────┤\n",
+       "│     1 │ a       │\n",
+       "│     2 │ b       │\n",
+       "│     3 │ c       │\n",
+       "└───────┴─────────┘"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#read\n",
     "cn.sql(\"select * from s3cat.ns1.tbl1\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "5be101d4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<_duckdb.DuckDBPyConnection at 0x121a13f30>"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cn.execute(\"drop table s3cat.ns1.tbl1\")"
    ]
   },
   {
