--- a/substack/articles/2025.09.28-s3_tables/scratchpad.ipynb
+++ b/substack/articles/2025.09.28-s3_tables/scratchpad.ipynb
@@ -26,17 +26,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "id": "50f960b0",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<_duckdb.DuckDBPyConnection at 0x121a13f30>"
+       "<_duckdb.DuckDBPyConnection at 0x10cd99070>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -55,7 +55,71 @@
     "       type iceberg,\n",
     "       endpoint_type s3_tables\n",
     "    )\n",
+    "\"\"\")\n",
+    "\n",
+    "cn.execute(\"create table s3cat.ns1.test_for_athena as select 1 as x, 'a' as y\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "1c52cf6c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cn.sql(f\"\"\"\n",
+    "  attach or replace '{aws_acct_id}:s3tablescatalog/icehouse-tbl-bucket1' as s3cat_sm (\n",
+    "        type iceberg,\n",
+    "        endpoint_type glue\n",
+    "    )\n",
     "\"\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "de142d0f",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ParserException",
+     "evalue": "Parser Error: syntax error at or near \"using\"\n\nLINE 2:     create table s3cat_sm.ns1.tbl6 using (iceberg) as\n                                           ^",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mParserException\u001b[39m                           Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[10]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mcn\u001b[49m\u001b[43m.\u001b[49m\u001b[43mexecute\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m\"\"\"\u001b[39;49m\n\u001b[32m      2\u001b[39m \u001b[33;43m    create table s3cat_sm.ns1.tbl6 using (iceberg) as\u001b[39;49m\n\u001b[32m      3\u001b[39m \u001b[33;43m           select 1 as x, \u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[33;43ma\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[33;43m as y       \u001b[39;49m\n\u001b[32m      4\u001b[39m \u001b[33;43m\"\"\"\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "\u001b[31mParserException\u001b[39m: Parser Error: syntax error at or near \"using\"\n\nLINE 2:     create table s3cat_sm.ns1.tbl6 using (iceberg) as\n                                           ^"
+     ]
+    }
+   ],
+   "source": [
+    "#athena can't read it this way either...\n",
+    "cn.execute(\"\"\"\n",
+    "    create table s3cat_sm.ns1.tbl5 as\n",
+    "           select 1 as x, 'a' as y       \n",
+    "\"\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "87dc6bac",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<_duckdb.DuckDBPyConnection at 0x10bd785f0>"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cn.execute(\"drop table s3cat_sm.ns1.tbl5\")"
    ]
   },
   {
