--- a/substack/articles/2025.09.21 - glue_tables_duckdb/scratchpad.ipynb
+++ b/substack/articles/2025.09.21 - glue_tables_duckdb/scratchpad.ipynb
@@ -15,24 +15,70 @@
    "execution_count": 1,
    "id": "1a0c2ac0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using cached assumed role credentials (expires: 2025-10-01T10:59:23+00:00)\n",
+      "Set AWS environment variables for: ASIA3HWF...\n"
+     ]
+    }
+   ],
    "source": [
-    "# Import the setup function from gen_tables.py\n",
-    "from gen_tables import setup_notebook_environment\n",
+    "\n",
+    "from setup_env import setup_aws_environment\n",
+    "setup_aws_environment()\n",
     "\n",
     "# Set up all necessary components (DuckDB connection, PyIceberg catalog, Glue client)\n",
+    "from gen_tables import setup_notebook_environment\n",
     "cn, catalog, glue_client = setup_notebook_environment()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
+   "id": "93951608",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "┌────────┬──────────────────────────────────────┬────────────┬──────────┐\n",
+       "│ row_id │               txn_key                │   rpt_dt   │ some_val │\n",
+       "│ int64  │               varchar                │    date    │  double  │\n",
+       "├────────┼──────────────────────────────────────┼────────────┼──────────┤\n",
+       "│      1 │ 2caa5c6c-168e-4fb6-ac53-179b1a9f01c7 │ 2025-09-21 │    89.55 │\n",
+       "│      2 │ aea5db0e-4d19-418e-88f4-bbf69038f3e1 │ 2025-09-21 │     52.2 │\n",
+       "│      3 │ 967ada5f-16e5-48a8-81db-336d619164fd │ 2025-09-21 │    64.71 │\n",
+       "│      4 │ 6a738a6d-b997-40bb-a0a6-ad8fd6682329 │ 2025-09-21 │    26.25 │\n",
+       "│      5 │ f7e73bbe-29b6-463c-8435-96d6b4b911dc │ 2025-09-21 │    10.26 │\n",
+       "└────────┴──────────────────────────────────────┴────────────┴──────────┘"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from query_glue_table import register_glue_table\n",
+    "db_name = \"icebox1\"\n",
+    "table_name = \"parquet_test\"\n",
+    "register_glue_table(db_name, table_name, glue_client, catalog, cn)\n",
+    "\n",
+    "cn.sql(\"select * from parquet_test limit 5\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "95790a89",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Import query functions and create views for all table types\n",
-    "from query_glue_table import create_duckdb_view_from_glue_table\n",
+    "from query_glue_table import register_glue_table\n",
     "\n",
     "# Database and tables to work with\n",
     "db_name = \"icebox1\"\n",
