--- a/substack/articles/2025.09.21 - glue_tables_duckdb/scratchpad.ipynb
+++ b/substack/articles/2025.09.21 - glue_tables_duckdb/scratchpad.ipynb
@@ -3,180 +3,96 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6e26e3cc",
+   "id": "1a0c2ac0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#%pip install boto3 duckdb 'pyiceberg[glue]' pyarrow"
+    "%run gen_tables.py"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "1a0c2ac0",
+   "execution_count": null,
+   "id": "6d6f22de",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Using cached assumed role credentials (expires: 2025-10-01T10:59:23+00:00)\n",
-      "Set AWS environment variables for: ASIA3HWF...\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "from aws_auth import setup_aws_environment\n",
+    "setup_aws_environment()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a7839885",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "\n",
-    "from setup_env import setup_aws_environment\n",
-    "setup_aws_environment()\n",
+    "import config_duckdb\n",
+    "cn = config_duckdb.config_duckdb_conn()\n",
     "\n",
-    "# Set up all necessary components (DuckDB connection, PyIceberg catalog, Glue client)\n",
-    "from gen_tables import setup_notebook_environment\n",
-    "cn, catalog, glue_client = setup_notebook_environment()"
+    "import register_glue_tables as g\n",
+    "\n",
+    "catalog_name = \"glue_catalog\"\n",
+    "g.attach_catalog(cn, catalog_name)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
+   "id": "a0d7c403",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "glue_db_name = \"icebox1\"\n",
+    "g.register_table(cn, catalog_name, glue_db_name, \"parquet_test\")\n",
+    "g.register_table(cn, catalog_name, glue_db_name, \"csv_test\")\n",
+    "g.register_table(cn, catalog_name, glue_db_name, \"iceberg_test\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "id": "93951608",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "┌────────┬──────────────────────────────────────┬────────────┬──────────┐\n",
-       "│ row_id │               txn_key                │   rpt_dt   │ some_val │\n",
-       "│ int64  │               varchar                │    date    │  double  │\n",
-       "├────────┼──────────────────────────────────────┼────────────┼──────────┤\n",
-       "│      1 │ 2caa5c6c-168e-4fb6-ac53-179b1a9f01c7 │ 2025-09-21 │    89.55 │\n",
-       "│      2 │ aea5db0e-4d19-418e-88f4-bbf69038f3e1 │ 2025-09-21 │     52.2 │\n",
-       "│      3 │ 967ada5f-16e5-48a8-81db-336d619164fd │ 2025-09-21 │    64.71 │\n",
-       "│      4 │ 6a738a6d-b997-40bb-a0a6-ad8fd6682329 │ 2025-09-21 │    26.25 │\n",
-       "│      5 │ f7e73bbe-29b6-463c-8435-96d6b4b911dc │ 2025-09-21 │    10.26 │\n",
-       "└────────┴──────────────────────────────────────┴────────────┴──────────┘"
+       "┌────────┬──────────┬──────────────────────────────────────┐\n",
+       "│ row_id │ some_val │               txn_key                │\n",
+       "│ int64  │  double  │               varchar                │\n",
+       "├────────┼──────────┼──────────────────────────────────────┤\n",
+       "│      1 │    90.96 │ b67bda7a-aaa0-43c0-9419-08ea7be53639 │\n",
+       "│      2 │    13.92 │ d1a93fee-b440-45a1-bb19-b5f139037990 │\n",
+       "│      3 │    47.09 │ 8a510e46-a0a4-4a48-9749-42c3d961be8a │\n",
+       "│      4 │    16.58 │ 890ff0d9-b226-4d3f-817b-4aafac86743e │\n",
+       "│      5 │    57.76 │ 965b7345-1b58-4d32-a4c6-77bfb70eaa4d │\n",
+       "│      6 │    58.48 │ f7ecb982-2177-4a98-98ce-2358d8ab4989 │\n",
+       "│      7 │    16.26 │ d0eeb81f-3a67-4c01-bcf7-b6a36a0b4d92 │\n",
+       "│      8 │    69.95 │ 72095105-ecbc-492c-9a93-e619c061ce61 │\n",
+       "│      9 │    19.65 │ 6cf5e68a-a604-45cc-8d5e-34ecada02727 │\n",
+       "│     10 │    29.61 │ 3e9560cf-3bcb-444a-97b0-d98737800a40 │\n",
+       "├────────┴──────────┴──────────────────────────────────────┤\n",
+       "│ 10 rows                                        3 columns │\n",
+       "└──────────────────────────────────────────────────────────┘"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from query_glue_table import register_glue_table\n",
-    "db_name = \"icebox1\"\n",
-    "table_name = \"parquet_test\"\n",
-    "register_glue_table(db_name, table_name, glue_client, catalog, cn)\n",
-    "\n",
-    "cn.sql(\"select * from parquet_test limit 5\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "95790a89",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Import query functions and create views for all table types\n",
-    "from query_glue_table import register_glue_table\n",
-    "\n",
-    "# Database and tables to work with\n",
-    "db_name = \"icebox1\"\n",
-    "tables = [\"iceberg_test\", \"parquet_test\", \"csv_test\"]\n",
-    "\n",
-    "# Create views for individual tables\n",
-    "for table in tables:\n",
-    "    try:\n",
-    "        view_name = create_duckdb_view_from_glue_table(\n",
-    "            db_name=db_name, \n",
-    "            table_name=table,\n",
-    "            glue_client=glue_client, \n",
-    "            catalog=catalog, \n",
-    "            cn=cn\n",
-    "        )\n",
-    "    except Exception as e:\n",
-    "        print(f\"❌ Failed to create view for {table}: {e}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "8bbba6de",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Sample from v_iceberg_test:\n",
-      "┌────────┬──────────────────────────────────────┬────────────┬──────────┐\n",
-      "│ row_id │               txn_key                │   rpt_dt   │ some_val │\n",
-      "│ int64  │               varchar                │    date    │  double  │\n",
-      "├────────┼──────────────────────────────────────┼────────────┼──────────┤\n",
-      "│      1 │ 03724388-b7d8-4999-8589-1031a3562f48 │ 2025-09-20 │     4.89 │\n",
-      "│      2 │ 348ce2e6-13b6-489d-8a51-0716f3ce309c │ 2025-09-20 │    91.06 │\n",
-      "│      3 │ e18bb457-ebe0-44e7-81a6-e4c1cae31328 │ 2025-09-20 │     3.87 │\n",
-      "└────────┴──────────────────────────────────────┴────────────┴──────────┘\n",
-      "\n",
-      "\n",
-      "Sample from v_parquet_test:\n",
-      "┌────────┬──────────────────────────────────────┬────────────┬──────────┐\n",
-      "│ row_id │               txn_key                │   rpt_dt   │ some_val │\n",
-      "│ int64  │               varchar                │    date    │  double  │\n",
-      "├────────┼──────────────────────────────────────┼────────────┼──────────┤\n",
-      "│      1 │ f551e547-9eb7-417a-b37c-deb9b9a7226a │ 2025-09-20 │    91.45 │\n",
-      "│      2 │ 17a9e21a-012c-4f40-8962-a7686833728f │ 2025-09-20 │    47.04 │\n",
-      "│      3 │ de4e8587-44f8-4a7c-a87e-afcd9f530e71 │ 2025-09-20 │    83.74 │\n",
-      "└────────┴──────────────────────────────────────┴────────────┴──────────┘\n",
-      "\n",
-      "\n",
-      "Sample from v_csv_test:\n",
-      "┌────────┬──────────────────────────────────────┬────────────┬──────────┐\n",
-      "│ row_id │               txn_key                │   rpt_dt   │ some_val │\n",
-      "│ int64  │               varchar                │    date    │  double  │\n",
-      "├────────┼──────────────────────────────────────┼────────────┼──────────┤\n",
-      "│      1 │ f551e547-9eb7-417a-b37c-deb9b9a7226a │ 2025-09-20 │    91.45 │\n",
-      "│      2 │ 17a9e21a-012c-4f40-8962-a7686833728f │ 2025-09-20 │    47.04 │\n",
-      "│      3 │ de4e8587-44f8-4a7c-a87e-afcd9f530e71 │ 2025-09-20 │    83.74 │\n",
-      "└────────┴──────────────────────────────────────┴────────────┴──────────┘\n",
-      "\n",
-      "\n",
-      "Sample from v_csv_test:\n",
-      "┌────────┬──────────────────────────────────────┬────────────┬──────────┐\n",
-      "│ row_id │               txn_key                │   rpt_dt   │ some_val │\n",
-      "│ int64  │               varchar                │    date    │  double  │\n",
-      "├────────┼──────────────────────────────────────┼────────────┼──────────┤\n",
-      "│      1 │ 482c1878-5f0d-46db-82e9-9ac8efc2e266 │ 2025-09-20 │     1.81 │\n",
-      "│      2 │ aff2a6d3-3595-400e-abe2-22e26ba9ffdf │ 2025-09-20 │    73.47 │\n",
-      "│      3 │ feb13688-c801-4321-bf2c-8a481d649dfd │ 2025-09-20 │    29.46 │\n",
-      "└────────┴──────────────────────────────────────┴────────────┴──────────┘\n",
-      "\n",
-      "\n",
-      "┌────────┬──────────────────────────────────────┬────────────┬──────────┐\n",
-      "│ row_id │               txn_key                │   rpt_dt   │ some_val │\n",
-      "│ int64  │               varchar                │    date    │  double  │\n",
-      "├────────┼──────────────────────────────────────┼────────────┼──────────┤\n",
-      "│      1 │ 482c1878-5f0d-46db-82e9-9ac8efc2e266 │ 2025-09-20 │     1.81 │\n",
-      "│      2 │ aff2a6d3-3595-400e-abe2-22e26ba9ffdf │ 2025-09-20 │    73.47 │\n",
-      "│      3 │ feb13688-c801-4321-bf2c-8a481d649dfd │ 2025-09-20 │    29.46 │\n",
-      "└────────┴──────────────────────────────────────┴────────────┴──────────┘\n",
-      "\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Show sample data from each created view\n",
-    "view_names = [\"v_iceberg_test\", \"v_parquet_test\", \"v_csv_test\"]\n",
-    "\n",
-    "for view_name in view_names:\n",
-    "    try:\n",
-    "        print(f\"Sample from {view_name}:\")\n",
-    "        sample = cn.sql(f\"SELECT * FROM {view_name} LIMIT 3\")\n",
-    "        print(sample)\n",
-    "        print()\n",
-    "    except Exception as e:\n",
-    "        print(f\"❌ Could not query {view_name}: {e}\")"
+    "sql = f\"\"\"\n",
+    "    select i.row_id, p.some_val, i.txn_key\n",
+    "    from glue_catalog.iceberg_test as i\n",
+    "        left join glue_catalog.parquet_test as p\n",
+    "            on i.row_id = p.row_id\n",
+    "    limit 10\n",
+    "\"\"\"\n",
+    "cn.sql(sql)"
    ]
   }
  ],
