--- a/substack/articles/2025.09.21 - glue_tables_duckdb/scratchpad.ipynb
+++ b/substack/articles/2025.09.21 - glue_tables_duckdb/scratchpad.ipynb
@@ -23,37 +23,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "a7839885",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "registered glue table csv_test as icebox1.csv_test (type: CSV)\n",
+      "registered glue table iceberg_test as icebox1.iceberg_test (type: ICEBERG)\n",
+      "registered glue table parquet_test as icebox1.parquet_test (type: PARQUET)\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "import config_duckdb\n",
     "cn = config_duckdb.config_duckdb_conn()\n",
     "\n",
-    "import register_glue_tables as g\n",
+    "import register_glue_db \n",
     "\n",
-    "catalog_name = \"glue_catalog\"\n",
-    "g.attach_catalog(cn, catalog_name)\n"
+    "glue_db_name = 'icebox1'\n",
+    "register_glue_db.register_glue_tables(cn, glue_db_name)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "a0d7c403",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "glue_db_name = \"icebox1\"\n",
-    "g.register_table(cn, catalog_name, glue_db_name, \"parquet_test\")\n",
-    "g.register_table(cn, catalog_name, glue_db_name, \"csv_test\")\n",
-    "g.register_table(cn, catalog_name, glue_db_name, \"iceberg_test\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "id": "93951608",
    "metadata": {},
    "outputs": [
@@ -79,16 +76,16 @@
        "└──────────────────────────────────────────────────────────┘"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sql = f\"\"\"\n",
+    "sql = \"\"\"\n",
     "    select i.row_id, p.some_val, i.txn_key\n",
-    "    from glue_catalog.iceberg_test as i\n",
-    "        left join glue_catalog.parquet_test as p\n",
+    "    from icebox1.iceberg_test as i\n",
+    "        left join icebox1.parquet_test as p\n",
     "            on i.row_id = p.row_id\n",
     "    limit 10\n",
     "\"\"\"\n",
