--- a/substack/articles/2025.09.21 - glue_tables_duckdb/scratchpad.ipynb
+++ b/substack/articles/2025.09.21 - glue_tables_duckdb/scratchpad.ipynb
@@ -50,43 +50,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "93951608",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "┌────────┬──────────┬──────────────────────────────────────┐\n",
-       "│ row_id │ some_val │               txn_key                │\n",
-       "│ int64  │  double  │               varchar                │\n",
-       "├────────┼──────────┼──────────────────────────────────────┤\n",
-       "│      1 │     0.52 │ 41771975-9714-4e17-a6e9-ba8fa6ab51f1 │\n",
-       "│      2 │    32.39 │ 39aeaf7e-cd68-4be6-bc65-e39712b9b751 │\n",
-       "│      3 │    82.26 │ 861060b7-2763-466e-b67c-309e01a9af28 │\n",
-       "│      4 │    70.38 │ 9d7ec48a-000e-4bd5-9565-d3f3494ad30f │\n",
-       "│      5 │    27.51 │ b39e4f6c-e983-46aa-a5bf-456b0aa45e13 │\n",
-       "│      6 │    80.44 │ 889874ef-20bd-4016-bc60-9efb53bf62ba │\n",
-       "│      7 │     29.2 │ e2ad02e3-e980-4243-96ab-666aec4ff280 │\n",
-       "│      8 │    50.49 │ 9b8375fb-b4d6-4975-94cf-832f3dc11090 │\n",
-       "│      9 │    76.97 │ 4a05749c-3810-4f19-8ab5-24d00dd72039 │\n",
-       "│     10 │    73.02 │ 48866898-f9f5-4f26-978d-a9cef9bae48a │\n",
-       "├────────┴──────────┴──────────────────────────────────────┤\n",
-       "│ 10 rows                                        3 columns │\n",
-       "└──────────────────────────────────────────────────────────┘"
+       "┌────────┬──────────┬──────────────────────────────────────┬────────────┐\n",
+       "│ row_id │ some_val │               txn_key                │   rpt_dt   │\n",
+       "│ int64  │  double  │               varchar                │    date    │\n",
+       "├────────┼──────────┼──────────────────────────────────────┼────────────┤\n",
+       "│      1 │     0.52 │ 41771975-9714-4e17-a6e9-ba8fa6ab51f1 │ 2025-10-02 │\n",
+       "│      2 │    32.39 │ 39aeaf7e-cd68-4be6-bc65-e39712b9b751 │ 2025-10-02 │\n",
+       "│      3 │    82.26 │ 861060b7-2763-466e-b67c-309e01a9af28 │ 2025-10-02 │\n",
+       "│      4 │    70.38 │ 9d7ec48a-000e-4bd5-9565-d3f3494ad30f │ 2025-10-02 │\n",
+       "│      5 │    27.51 │ b39e4f6c-e983-46aa-a5bf-456b0aa45e13 │ 2025-10-02 │\n",
+       "│      6 │    80.44 │ 889874ef-20bd-4016-bc60-9efb53bf62ba │ 2025-10-02 │\n",
+       "│      7 │     29.2 │ e2ad02e3-e980-4243-96ab-666aec4ff280 │ 2025-10-02 │\n",
+       "│      8 │    50.49 │ 9b8375fb-b4d6-4975-94cf-832f3dc11090 │ 2025-10-02 │\n",
+       "│      9 │    76.97 │ 4a05749c-3810-4f19-8ab5-24d00dd72039 │ 2025-10-02 │\n",
+       "│     10 │    73.02 │ 48866898-f9f5-4f26-978d-a9cef9bae48a │ 2025-10-02 │\n",
+       "├────────┴──────────┴──────────────────────────────────────┴────────────┤\n",
+       "│ 10 rows                                                     4 columns │\n",
+       "└───────────────────────────────────────────────────────────────────────┘"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "sql = \"\"\"\n",
-    "    select i.row_id, p.some_val, i.txn_key\n",
+    "    select i.row_id, p.some_val, i.txn_key, c.rpt_dt\n",
     "    from icebox1.iceberg_test as i\n",
     "        left join icebox1.parquet_test as p\n",
     "            on i.row_id = p.row_id\n",
+    "        left join icebox1.csv_test as c\n",
+    "            on i.row_id = c.row_id\n",
     "    limit 10\n",
     "\"\"\"\n",
     "cn.sql(sql)"
