--- a/substack/articles/2025.11.18-duckdb_1_tb/scratchpad.ipynb
+++ b/substack/articles/2025.11.18-duckdb_1_tb/scratchpad.ipynb
@@ -2,7 +2,97 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
+   "id": "8cf69481",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import duckdb\n",
+    "cn = duckdb.connect()\n",
+    "\n",
+    "f_path = f'/Volumes/xd1/data/*.parquet'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "148013e2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "┌─────────────┬───────────────────┐\n",
+      "│   row_cnt   │  total_rand_val   │\n",
+      "│    int64    │      double       │\n",
+      "├─────────────┼───────────────────┤\n",
+      "│ 20000000000 │ 999994336575.2292 │\n",
+      "└─────────────┴───────────────────┘\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "cn.sql(f\"select count(*) as row_cnt, sum(rand_val) as total_rand_val from read_parquet('{f_path}')\").show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "7f6ffe95",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "┌────────────┬──────────┬────────────────────┐\n",
+      "│  rand_dt   │ row_cnt  │   total_rand_val   │\n",
+      "│    date    │  int64   │       double       │\n",
+      "├────────────┼──────────┼────────────────────┤\n",
+      "│ 2020-01-01 │  5477651 │ 273886902.00000197 │\n",
+      "│ 2020-01-02 │ 10943983 │  547110535.1299974 │\n",
+      "│ 2020-01-03 │ 10948206 │  547470446.5699921 │\n",
+      "│ 2020-01-04 │ 10943420 │  547121266.7200058 │\n",
+      "│ 2020-01-05 │ 10942993 │  547097290.5899993 │\n",
+      "│ 2020-01-06 │ 10942101 │  546988034.7099966 │\n",
+      "│ 2020-01-07 │ 10949446 │  547517452.2300005 │\n",
+      "│ 2020-01-08 │ 10952700 │  547521342.1899987 │\n",
+      "│ 2020-01-09 │ 10949112 │  547399170.5099945 │\n",
+      "│ 2020-01-10 │ 10945046 │  547230851.7400022 │\n",
+      "│     ·      │     ·    │          ·         │\n",
+      "│     ·      │     ·    │          ·         │\n",
+      "│     ·      │     ·    │          ·         │\n",
+      "│ 2024-12-23 │ 10947731 │  547372630.6999985 │\n",
+      "│ 2024-12-24 │ 10945221 │   547396664.850004 │\n",
+      "│ 2024-12-25 │ 10944839 │  547219373.8100009 │\n",
+      "│ 2024-12-26 │ 10945387 │  547207846.4700003 │\n",
+      "│ 2024-12-27 │ 10939441 │  546907181.1599977 │\n",
+      "│ 2024-12-28 │ 10944720 │  547190341.4400039 │\n",
+      "│ 2024-12-29 │ 10943111 │  547228455.9100018 │\n",
+      "│ 2024-12-30 │ 10943449 │   547204707.890002 │\n",
+      "│ 2024-12-31 │ 10944351 │  547049880.5099936 │\n",
+      "│ 2025-01-01 │  5467992 │ 273462451.01999766 │\n",
+      "├────────────┴──────────┴────────────────────┤\n",
+      "│ 1828 rows (20 shown)             3 columns │\n",
+      "└────────────────────────────────────────────┘\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "cn.sql(f\"\"\"\n",
+    "    select rand_dt, count(*) as row_cnt, sum(rand_val) as total_rand_val \n",
+    "    from read_parquet('{f_path}')\n",
+    "    group by all\n",
+    "    order by rand_dt\n",
+    "    \"\"\").show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "946af45d",
    "metadata": {},
    "outputs": [
@@ -47,10 +137,8 @@
     }
    ],
    "source": [
-    "import duckdb\n",
-    "cn = duckdb.connect()\n",
     "\n",
-    "f_path = f'/Volumes/xd1/data/*.parquet'\n",
+    "\n",
     "\n",
     "sql = f\"\"\"\n",
     "    SELECT *\n",
