--- a/substack/articles/2025.11.18-duckdb_1_tb/scratchpad.ipynb
+++ b/substack/articles/2025.11.18-duckdb_1_tb/scratchpad.ipynb
@@ -15,6 +15,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "id": "0f79fb7d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "┌────────────────────┐\n",
+      "│   total_size_tb    │\n",
+      "│       double       │\n",
+      "├────────────────────┤\n",
+      "│ 1.0036549105261656 │\n",
+      "└────────────────────┘\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "cn.sql(f\"\"\"\n",
+    "    select sum(size)/1024.00/1024.00/1024.00/1024.00 as total_size_tb\n",
+    "    from read_blob('{f_path}')\n",
+    "\"\"\").show()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "id": "148013e2",
    "metadata": {},
