--- a/substack/articles/2025.11.18-duckdb_1_tb/scratchpad.ipynb
+++ b/substack/articles/2025.11.18-duckdb_1_tb/scratchpad.ipynb
@@ -176,6 +176,52 @@
     "\n",
     "cn.sql(f\"select count(*) as row_cnt from read_parquet('{f_path}')\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "4dc19313",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "25600000000\n"
+     ]
+    }
+   ],
+   "source": [
+    "row_cnt = 50_000_000\n",
+    "for i in range(1,10):\n",
+    "    row_cnt += row_cnt\n",
+    "\n",
+    "\n",
+    "print(row_cnt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "69c0ac2a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0678d812",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import duckdb\n",
+    "cn = duckdb.connect(f'md:db1?motherduck_token={os.getenv(\"MD_TOKEN\")}')\n",
+    "for i in range(10):\n",
+    "    cn.sql(f\"insert into t_data select * from t_data limit 100000000\")\n",
+    "    print(f\"Iteration {i} complete\")"
+   ]
   }
  ],
  "metadata": {
