--- a/concept2/scratchpad.ipynb
+++ b/concept2/scratchpad.ipynb
@@ -20,36 +20,60 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Downloading workout data for season year 2026...\n",
-      "Workout data download completed successfully\n",
-      "Download output: Logging in...\n",
+      "\n",
+      "Logging in...\n",
       "Login successful.\n",
       "Successfully downloaded and modified season summary to /Users/matthewmartin/concept2/workouts/season_summary_2026.csv\n",
       "Fetching all season data from https://log.concept2.com/season/2026?per_page=all...\n",
       "Found profile ID: 2261340\n",
-      "Found 99 workouts. Starting download with 10 parallel workers...\n",
-      "Skipped 2025-10-25_rowerg_detail_workout_107616138.csv (already exists)\n",
-      "Skipped 2025-10-20_rowerg_detail_workout_107416937.csv (already exists)\n",
-      "Skipped 2025-10-19_skierg_detail_workout_107389886.csv (already exists)\n",
-      "Skipped 2025-10-23_skierg_detail_workout_107544846.csv (already exists)\n",
-      "Skipped 2025-10-08_rowerg_detail_workout_107001238.csv (already exists)\n",
+      "Found 125 workouts. Starting download with 10 parallel workers...\n",
+      "Skipped 2025-12-24_skierg_detail_workout_110236720.csv (already exists)\n",
+      "Skipped 2025-12-08_rowerg_detail_workout_109464606.csv (already exists)\n",
+      "Skipped 2025-12-23_rowerg_detail_workout_110190940.csv (already exists)\n",
+      "Skipped 2025-11-29_rowerg_detail_workout_109029852.csv (already exists)\n",
+      "Skipped 2025-12-22_skierg_detail_workout_110140682.csv (already exists)\n",
+      "Skipped 2025-12-13_rowerg_detail_workout_109721701.csv (already exists)\n",
+      "Skipped 2025-12-12_skierg_detail_workout_109677268.csv (already exists)\n",
+      "Skipped 2025-12-24_rowerg_detail_workout_110237225.csv (already exists)\n",
+      "Skipped 2025-12-28_skierg_detail_workout_110361748.csv (already exists)\n",
+      "Skipped 2025-12-07_skierg_detail_workout_109423362.csv (already exists)\n",
+      "Skipped 2025-12-03_rowerg_detail_workout_109229562.csv (already exists)\n",
+      "Skipped 2025-11-24_rowerg_detail_workout_108806383.csv (already exists)\n",
+      "Skipped 2025-11-15_skierg_detail_workout_108453126.csv (already exists)\n",
+      "Skipped 2025-11-23_skierg_detail_workout_108772839.csv (already exists)\n",
+      "Skipped 2025-12-02_skierg_detail_workout_109196486.csv (already exists)\n",
+      "Skipped 2025-11-19_skierg_detail_workout_108614483.csv (already exists)\n",
+      "Skipped 2025-11-05_skierg_detail_workout_108045929.csv (already exists)\n",
+      "Skipped 2025-11-28_skierg_detail_workout_108987302.csv (already exists)\n",
+      "Skipped 2025-11-01_skierg_detail_workout_107888246.csv (already exists)\n",
+      "Skipped 2025-11-10_skierg_detail_workout_108236108.csv (already exists)\n",
       "Skipped 2025-10-28_skierg_detail_workout_107726550.csv (already exists)\n",
       "Skipped 2025-10-29_rowerg_detail_workout_107771075.csv (already exists)\n",
-      "Skipped 2025-10-12_skierg_detail_workout_107140771.csv (already exists)\n",
+      "Skipped 2025-11-06_rowerg_detail_workout_108097718.csv (already exists)\n",
+      "Skipped 2025-11-16_rowerg_detail_workout_108486374.csv (already exists)\n",
+      "Skipped 2025-10-19_skierg_detail_workout_107389886.csv (already exists)\n",
+      "Skipped 2025-11-02_rowerg_detail_workout_107919554.csv (already exists)\n",
+      "Skipped 2025-11-20_rowerg_detail_workout_108659772.csv (already exists)\n",
       "Skipped 2025-10-13_rowerg_detail_workout_107170788.csv (already exists)\n",
-      "Skipped 2025-10-16_rowerg_detail_workout_107301102.csv (already exists)\n",
+      "Skipped 2025-10-08_rowerg_detail_workout_107001238.csv (already exists)\n",
+      "Skipped 2025-10-23_skierg_detail_workout_107544846.csv (already exists)\n",
+      "Skipped 2025-10-20_rowerg_detail_workout_107416937.csv (already exists)\n",
       "Skipped 2025-10-04_rowerg_detail_workout_106856968.csv (already exists)\n",
-      "Skipped 2025-10-07_skierg_detail_workout_106959184.csv (already exists)\n",
+      "Skipped 2025-10-16_rowerg_detail_workout_107301102.csv (already exists)\n",
       "Skipped 2025-09-29_rowerg_detail_workout_106660142.csv (already exists)\n",
-      "Skipped 2025-10-03_skierg_detail_workout_106823437.csv (already exists)\n",
       "Skipped 2025-09-29_skierg_detail_workout_106659691.csv (already exists)\n",
+      "Skipped 2025-10-25_rowerg_detail_workout_107616138.csv (already exists)\n",
+      "Skipped 2025-10-12_skierg_detail_workout_107140771.csv (already exists)\n",
+      "Skipped 2025-11-11_rowerg_detail_workout_108281951.csv (already exists)\n",
+      "Skipped 2025-10-03_skierg_detail_workout_106823437.csv (already exists)\n",
+      "Skipped 2025-10-07_skierg_detail_workout_106959184.csv (already exists)\n",
       "Skipped 2025-09-14_rowerg_detail_workout_106133230.csv (already exists)\n",
       "Skipped 2025-09-11_rowerg_detail_workout_106038564.csv (already exists)\n",
       "Skipped 2025-09-10_skierg_detail_workout_106002444.csv (already exists)\n",
-      "Skipped 2025-09-07_skierg_detail_workout_105895894.csv (already exists)\n",
       "Skipped 2025-09-07_rowerg_detail_workout_105896238.csv (already exists)\n",
-      "Skipped 2025-09-03_skierg_detail_workout_105760031.csv (already exists)\n",
+      "Skipped 2025-09-07_skierg_detail_workout_105895894.csv (already exists)\n",
       "Skipped 2025-09-04_rowerg_detail_workout_105799853.csv (already exists)\n",
+      "Skipped 2025-09-03_skierg_detail_workout_105760031.csv (already exists)\n",
       "Skipped 2025-08-29_rowerg_detail_workout_105595269.csv (already exists)\n",
       "Skipped 2025-08-28_skierg_detail_workout_105558781.csv (already exists)\n",
       "Skipped 2025-08-25_rowerg_detail_workout_105442548.csv (already exists)\n",
@@ -62,27 +86,28 @@
       "Skipped 2025-08-12_skierg_detail_workout_105012612.csv (already exists)\n",
       "Skipped 2025-08-08_rowerg_detail_workout_104890714.csv (already exists)\n",
       "Skipped 2025-08-07_skierg_detail_workout_104857760.csv (already exists)\n",
-      "No detailed CSV available for workout 106604744.\n",
-      "No detailed CSV available for workout 104716893.\n",
+      "No detailed CSV available for workout 106425488.\n",
+      "No detailed CSV available for workout 106533712.\n",
+      "No detailed CSV available for workout 104830252.\n",
+      "No detailed CSV available for workout 106533770.\n",
+      "No detailed CSV available for workout 106604716.\n",
       "Skipped 2025-07-28_rowerg_detail_workout_104519785.csv (already exists)\n",
-      "Skipped 2025-07-27_rowerg_detail_workout_104492314.csv (already exists)\n",
-      "Skipped 2025-07-27_skierg_detail_workout_104492315.csv (already exists)\n",
       "Skipped 2025-07-23_rowerg_detail_workout_104375138.csv (already exists)\n",
       "Skipped 2025-07-22_rowerg_detail_workout_104341202.csv (already exists)\n",
       "Skipped 2025-07-22_skierg_detail_workout_104340613.csv (already exists)\n",
       "Skipped 2025-07-18_rowerg_detail_workout_104220493.csv (already exists)\n",
       "Skipped 2025-07-17_rowerg_detail_workout_104189551.csv (already exists)\n",
       "Skipped 2025-07-17_skierg_detail_workout_104189168.csv (already exists)\n",
+      "Skipped 2025-07-27_rowerg_detail_workout_104492314.csv (already exists)\n",
+      "Skipped 2025-07-27_skierg_detail_workout_104492315.csv (already exists)\n",
       "Skipped 2025-07-13_skierg_detail_workout_104059409.csv (already exists)\n",
-      "Skipped 2025-07-13_rowerg_detail_workout_104059246.csv (already exists)\n",
-      "Skipped 2025-07-12_rowerg_detail_workout_104035648.csv (already exists)\n",
       "Skipped 2025-07-12_skierg_detail_workout_104035266.csv (already exists)\n",
       "Skipped 2025-07-08_skierg_detail_workout_103908801.csv (already exists)\n",
-      "Skipped 2025-07-08_rowerg_detail_workout_103908543.csv (already exists)\n",
+      "Skipped 2025-07-12_rowerg_detail_workout_104035648.csv (already exists)\n",
       "Skipped 2025-07-07_rowerg_detail_workout_103871826.csv (already exists)\n",
+      "Skipped 2025-07-08_rowerg_detail_workout_103908543.csv (already exists)\n",
+      "Skipped 2025-07-13_rowerg_detail_workout_104059246.csv (already exists)\n",
       "Skipped 2025-07-07_skierg_detail_workout_103871469.csv (already exists)\n",
-      "No detailed CSV available for workout 106533770.\n",
-      "No detailed CSV available for workout 104830252.\n",
       "Skipped 2025-07-03_skierg_detail_workout_103765111.csv (already exists)\n",
       "Skipped 2025-07-03_rowerg_detail_workout_103764924.csv (already exists)\n",
       "Skipped 2025-07-02_rowerg_detail_workout_103732091.csv (already exists)\n",
@@ -90,14 +115,14 @@
       "Skipped 2025-06-28_rowerg_detail_workout_103614286.csv (already exists)\n",
       "Skipped 2025-06-27_rowerg_detail_workout_103586538.csv (already exists)\n",
       "Skipped 2025-06-27_skierg_detail_workout_103586187.csv (already exists)\n",
-      "No detailed CSV available for workout 106425488.\n",
-      "No detailed CSV available for workout 106533713.\n",
+      "No detailed CSV available for workout 106604744.\n",
+      "Successfully downloaded 2025-12-29_rowerg_detail_workout_110395669.csv\n",
       "Skipped 2025-06-23_skierg_detail_workout_103457075.csv (already exists)\n",
       "Skipped 2025-06-23_rowerg_detail_workout_103450654.csv (already exists)\n",
-      "No detailed CSV available for workout 106604716.\n",
-      "No detailed CSV available for workout 106533712.\n",
+      "No detailed CSV available for workout 106533713.\n",
       "Skipped 2025-06-19_rowerg_detail_workout_103336724.csv (already exists)\n",
       "Skipped 2025-06-15_rowerg_detail_workout_103204437.csv (already exists)\n",
+      "Successfully downloaded 2025-12-30_rowerg_detail_workout_110438110.csv\n",
       "Skipped 2025-06-06_rowerg_detail_workout_102923466.csv (already exists)\n",
       "Skipped 2025-06-01_skierg_detail_workout_102746500.csv (already exists)\n",
       "Skipped 2025-06-01_rowerg_detail_workout_102746346.csv (already exists)\n",
@@ -118,37 +143,31 @@
       "Skipped 2025-05-05_skierg_detail_workout_101814063.csv (already exists)\n",
       "Skipped 2025-05-05_rowerg_detail_workout_101813828.csv (already exists)\n",
       "Skipped 2025-05-02_rowerg_detail_workout_101722490.csv (already exists)\n",
-      "Successfully downloaded 2025-11-02_rowerg_detail_workout_107919554.csv\n",
+      "Successfully downloaded 2025-12-30_skierg_detail_workout_110437543.csv\n",
+      "No detailed CSV available for workout 104716893.\n",
+      "No detailed CSV available for workout 104660165.\n",
       "No detailed CSV available for workout 104690272.\n",
       "No detailed CSV available for workout 104660166.\n",
-      "No detailed CSV available for workout 104660165.\n",
       "No detailed CSV available for workout 104660163.\n",
-      "No detailed CSV available for workout 103047842.\n",
       "No detailed CSV available for workout 104660164.\n",
+      "No detailed CSV available for workout 103047842.\n",
       "No detailed CSV available for workout 103468484.\n",
-      "Successfully downloaded 2025-11-01_skierg_detail_workout_107888246.csv\n",
       "\n",
       "--- Download Summary ---\n",
-      "Total workouts found: 99\n",
-      "New detail files downloaded: 2\n",
-      "Files skipped (already exist): 82\n",
+      "Total workouts found: 125\n",
+      "New detail files downloaded: 3\n",
+      "Files skipped (already exist): 107\n",
       "Workouts with no detail data: 15\n",
       "Failed downloads: 0\n",
       "\n",
-      "Download process complete. All files are saved in '/Users/matthewmartin/concept2/workouts'.\n",
-      "Setting up database connection...\n",
-      "Generating PDF report...\n",
-      "Creating pace over time chart...\n",
-      "Saving pace chart to PDF...\n",
-      "Saving pace chart to PDF...\n",
-      "Creating monthly meters chart...\n",
-      "PDF report generated successfully: concept2_workout_report.pdf\n"
+      "Download process complete. All files are saved in '/Users/matthewmartin/concept2/workouts'.\n"
      ]
     }
    ],
    "source": [
     "#%run generate_report.py --season-year 2026 --no-logbook-fetch\n",
-    "%run generate_report.py --season-year 2026"
+    "%run c2_workouts_dl.py --season-year 2026\n",
+    "#%run generate_report.py --season-year 2026"
    ]
   },
   {
