--- a/substack/articles/2026.01.03 - c2_semantic/scratchpad.ipynb
+++ b/substack/articles/2026.01.03 - c2_semantic/scratchpad.ipynb
@@ -2,16 +2,110 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "e79eb42a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<_duckdb.DuckDBPyConnection at 0x10c71b5f0>"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import duckdb\n",
     "\n",
     "cn = duckdb.connect(database=':memory:')\n",
     "\n",
-    "cn.execute(\"CREATE or replace view v_c2_detail as select * from read_csv_auto('~/concept2/workouts/*detail*.csv')\")"
+    "sql = \"\"\"\n",
+    "    CREATE or replace view v_c2_detail as \n",
+    "    select Number as stroke_number\n",
+    "        ,\"Time (seconds)\" as total_time\n",
+    "        ,\"Distance (meters)\" as total_distance\n",
+    "        ,\"Pace (seconds)\" as pace\n",
+    "        ,watts\n",
+    "        ,\"Stroke Rate\" as stroke_rate\n",
+    "        ,season as season_year\n",
+    "        ,\"date\" as workout_date\n",
+    "        ,machine_type\n",
+    "        ,strftime(\n",
+    "            TIMESTAMP '1970-01-01 00:00:00'\n",
+    "            + CAST(round(\"pace\") AS INTEGER) * INTERVAL 1 SECOND,\n",
+    "            '%M:%S'\n",
+    "        ) AS total_time_mm_ss\n",
+    "        ,printf(\n",
+    "            '%d:%02d.%02d',\n",
+    "            CAST(floor(CAST(round(\"pace\" * 100) AS INTEGER) / 6000) AS INTEGER),            -- minutes\n",
+    "            CAST(floor((CAST(round(\"pace\" * 100) AS INTEGER) % 6000) / 100) AS INTEGER),    -- seconds\n",
+    "            CAST(CAST(round(\"pace\" * 100) AS INTEGER) % 100 AS INTEGER)                     -- hundredths\n",
+    "        ) AS pace_mm_ss_ff\n",
+    "        ,CAST(regexp_extract(filename, '([0-9]+)\\\\.csv$', 1) AS BIGINT) AS log_id\n",
+    "    from read_csv_auto('~/concept2/workouts/*detail*.csv', filename=true)\n",
+    "\"\"\"\n",
+    "\n",
+    "\n",
+    "cn.execute(sql)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "db5f36ba",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "┌───────────────┬────────────┬────────────────┬────────┬───────┬─────────────┬─────────────┬──────────────┬──────────────┬──────────────────┬───────────────┬───────────┐\n",
+       "│ stroke_number │ total_time │ total_distance │  pace  │ Watts │ stroke_rate │ season_year │ workout_date │ machine_type │ total_time_mm_ss │ pace_mm_ss_ff │  log_id   │\n",
+       "│     int64     │   double   │     double     │ double │ int64 │    int64    │    int64    │     date     │   varchar    │     varchar      │    varchar    │   int64   │\n",
+       "├───────────────┼────────────┼────────────────┼────────┼───────┼─────────────┼─────────────┼──────────────┼──────────────┼──────────────────┼───────────────┼───────────┤\n",
+       "│             1 │        0.3 │            1.0 │    0.0 │  NULL │        NULL │        2026 │ 2025-12-23   │ rowerg       │ 00:00            │ 0:00.00       │ 110190940 │\n",
+       "│             2 │        2.3 │            8.5 │  151.0 │   102 │        NULL │        2026 │ 2025-12-23   │ rowerg       │ 02:31            │ 2:31.00       │ 110190940 │\n",
+       "│             3 │        4.3 │           16.6 │  132.2 │   151 │          27 │        2026 │ 2025-12-23   │ rowerg       │ 02:12            │ 2:12.20       │ 110190940 │\n",
+       "│             4 │        7.3 │           29.2 │  119.0 │   208 │          27 │        2026 │ 2025-12-23   │ rowerg       │ 01:59            │ 1:59.00       │ 110190940 │\n",
+       "│             5 │        9.3 │           37.6 │  119.0 │   208 │          27 │        2026 │ 2025-12-23   │ rowerg       │ 01:59            │ 1:59.00       │ 110190940 │\n",
+       "│             6 │       11.3 │           46.0 │  118.5 │   210 │          27 │        2026 │ 2025-12-23   │ rowerg       │ 01:59            │ 1:58.50       │ 110190940 │\n",
+       "│             7 │       13.3 │           54.6 │  118.6 │   210 │          26 │        2026 │ 2025-12-23   │ rowerg       │ 01:59            │ 1:58.60       │ 110190940 │\n",
+       "│             8 │       16.3 │           67.3 │  118.3 │   211 │          27 │        2026 │ 2025-12-23   │ rowerg       │ 01:58            │ 1:58.30       │ 110190940 │\n",
+       "│             9 │       18.3 │           75.7 │  118.1 │   212 │          26 │        2026 │ 2025-12-23   │ rowerg       │ 01:58            │ 1:58.10       │ 110190940 │\n",
+       "│            10 │       21.3 │           88.5 │  119.3 │   206 │          25 │        2026 │ 2025-12-23   │ rowerg       │ 01:59            │ 1:59.30       │ 110190940 │\n",
+       "│             · │         ·  │             ·  │    ·   │    ·  │           · │          ·  │     ·        │   ·          │   ·              │    ·          │     ·     │\n",
+       "│             · │         ·  │             ·  │    ·   │    ·  │           · │          ·  │     ·        │   ·          │   ·              │    ·          │     ·     │\n",
+       "│             · │         ·  │             ·  │    ·   │    ·  │           · │          ·  │     ·        │   ·          │   ·              │    ·          │     ·     │\n",
+       "│           472 │      708.6 │         2939.5 │  118.3 │   211 │          40 │        2026 │ 2026-01-09   │ skierg       │ 01:58            │ 1:58.30       │ 110946363 │\n",
+       "│           473 │      710.1 │         2946.1 │  118.8 │   209 │          41 │        2026 │ 2026-01-09   │ skierg       │ 01:59            │ 1:58.80       │ 110946363 │\n",
+       "│           474 │      711.4 │         2951.4 │  118.8 │   209 │          41 │        2026 │ 2026-01-09   │ skierg       │ 01:59            │ 1:58.80       │ 110946363 │\n",
+       "│           475 │      713.0 │         2958.2 │  118.7 │   209 │          41 │        2026 │ 2026-01-09   │ skierg       │ 01:59            │ 1:58.70       │ 110946363 │\n",
+       "│           476 │      714.5 │         2964.7 │  118.3 │   211 │          42 │        2026 │ 2026-01-09   │ skierg       │ 01:58            │ 1:58.30       │ 110946363 │\n",
+       "│           477 │      715.8 │         2970.2 │  118.3 │   211 │          42 │        2026 │ 2026-01-09   │ skierg       │ 01:58            │ 1:58.30       │ 110946363 │\n",
+       "│           478 │      717.3 │         2976.8 │  116.3 │   222 │          42 │        2026 │ 2026-01-09   │ skierg       │ 01:56            │ 1:56.30       │ 110946363 │\n",
+       "│           479 │      718.9 │         2983.4 │  116.2 │   223 │          42 │        2026 │ 2026-01-09   │ skierg       │ 01:56            │ 1:56.20       │ 110946363 │\n",
+       "│           480 │      720.1 │         2988.9 │  116.1 │   224 │          43 │        2026 │ 2026-01-09   │ skierg       │ 01:56            │ 1:56.10       │ 110946363 │\n",
+       "│           481 │      721.7 │         2995.7 │  116.8 │   220 │          42 │        2026 │ 2026-01-09   │ skierg       │ 01:57            │ 1:56.80       │ 110946363 │\n",
+       "├───────────────┴────────────┴────────────────┴────────┴───────┴─────────────┴─────────────┴──────────────┴──────────────┴──────────────────┴───────────────┴───────────┤\n",
+       "│ 8200 rows (20 shown)                                                                                                                                       12 columns │\n",
+       "└───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sql = \"\"\"\n",
+    "    from v_c2_detail\n",
+    "    where workout_date >= '2025-12-23'\n",
+    "    --limit 50\n",
+    "\"\"\"\n",
+    "\n",
+    "cn.sql(sql)"
    ]
   }
  ],
@@ -22,7 +116,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.11.13"
   }
  },
